[package]
name = "TCP_Packet_Dropper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aya = "0.12.0"
aya-log = "0.1"
aya-ebpf = "0.1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

