[package]
name = "xdp-drop-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
clap = { version = "4.1", features = ["derive"] }


[dependencies.xdp-drop]
path = "../filter"


[[bin]]
name = "filter_ip_port"
path = "fuzz_targets/filter_ip_port.rs"
test = false
doc = false
bench = false
